<resources>
    <string name="app_name">Box²</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">PID - BoxBox Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="find_boxes">Encontrar Caixas</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeria</string>
    <string name="home_title">Inicio</string>
    <string name="dev1">João Paulo de Castro</string>
    <string name="dev2">Paulo Junio Reis</string>
    <string name="dev3">Guilherme Galvão</string>
    <string name="professor">Alexei Machado</string>
    <string name="minCannySoft">0</string>
    <string name="maxCannySoft">250</string>
    <string name="minCannyStrong">0</string>
    <string name="maxCannyStrong">250</string>
    <string name="actualCannySoft">50</string>
    <string name="actualCannyStrong">50</string>
    <string name="canny_strong_borders">Bordas Fortes</string>
    <string name="canny_soft_borders">Bordas Fracas</string>
    <string name="canny_options">Opçoes do Canny</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Confirmar</string>
    <string name="user_settings">Configurações de Usuario</string>
    <string name="settings">Configurações</string>
    <string name="application_settings">Configurações</string>
    <string name="combination_heuristic">Heurística 1</string>
    <string name="no_combination_heuristic">Heurística 2</string>
    <string name="heuristic_settings">Heurísticas</string>
</resources>
