<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/canny_options"
                android:textSize="16sp"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canny_soft_borders"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <SeekBar
                android:id="@+id/cannyLowBorders"
                android:layout_width="match_parent"
                android:max="250"
                android:thumbTint="@color/colorAccent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minCannySoft"/>
                <TextView
                    android:id="@+id/actualCannyLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight=".5"
                    android:text="@string/actualCannySoft"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/maxCannySoft"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canny_strong_borders"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <SeekBar
                android:id="@+id/cannyStrongBorders"
                android:layout_width="match_parent"
                android:max="250"
                android:thumbTint="@color/colorAccent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minCannyStrong"/>
                <TextView
                    android:id="@+id/actualCannyStrong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight=".5"
                    android:text="@string/actualCannyStrong"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/maxCannyStrong"/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/dialogOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>
