<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/find_boxes">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_home"
                    android:title="Home"
                    />
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/camera" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/gallery" />
            </menu>
        </item>
    </group>

</menu>
